--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,11 @@
 <head>
     <title>Gauges as Components</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="clock">18:15</div>
+<div id="speed">120<small>km/h</small></div>
 <img id="road" src="img/road.png">
 <img id="vwlogo" src="img/vw_logo.png">
 <img id="t4image" src="img/t4.png">
