--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html>
-<head>
-    <title>Gauges as Components</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
-</head>
-<body>
-<div id="clock">18:15</div>
-<div id="speed">120<small>km/h</small></div>
-<img id="road" src="img/road.png">
-<img id="vwlogo" src="img/vw_logo.png">
-<img id="t4image" src="img/t4.png">
-<canvas id="speedometer" ></canvas>
-<script src="js/jquery-3.5.0.slim.min.js"></script>
-<script src="js/gauge.min.js"></script>
-<script src="js/cargauge.js"></script>
-</body>
+    <head>
+        <title>Gauges as Components</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    <body>
+        <div id="clock">18:15</div>
+        <div id="speed">120<small>km/h</small></div>
+        <img id="road" src="img/road.png">
+        <img id="vwlogo" src="img/vw_logo.png">
+        <img id="t4image" src="img/t4.png">
+        <img id="fuelicon" src="img/fuel.png">
+        <img id="oilpressureicon" src="img/oil.png">
+        <img id="oiltempicon" src="img/oil.png">
+        <canvas id="speedometer" ></canvas>
+        <canvas id="fuellevel"></canvas>
+        <canvas id="oilpressure"></canvas>
+        <canvas id="oiltemp"></canvas>
+        <script src="js/jquery-3.5.0.slim.min.js"></script>
+        <script src="js/gauge.min.js"></script>
+        <script src="js/cargauge.js"></script>
+    </body>
 </html>
